src/compile_test/must_fail/ignore/bad_compare_3.rs
use bounded_types::*;

fn main() {
    let ok: BoundedInt<0,10> = 1.into();
    let unbounded: Unbounded<_,_> = ok.into_unbounded();
    assert!(unbounded == 1);
}